restructured sass for readablity and fixed padding on button inside form area

--- a/sprint-2/stylesheets/partials/_mixins.scss
+++ b/sprint-2/stylesheets/partials/_mixins.scss
@@ -242,18 +242,8 @@
     }
 }
 
-@mixin header {
-    .header {
-        background-color: $black;
-    
-        @include tablet {
-            position: absolute;
-            width: 100%;
-            top:0;
-            left:0;
-            z-index: 99; //to put nav in front at all times
-        }
-    }
+@mixin header { 
+    .header { background-color: $black }
 }
 @mixin footer-preset {
     .footer {
@@ -399,7 +389,7 @@
         min-height: 70vw;
         position: relative;
         display: flex;
-        flex-direction: center;
+        flex-direction: column;
         align-items: center;
         @content;
     
